--- a/watchlist/templates/my_courses.html
+++ b/watchlist/templates/my_courses.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>home page</title>
+	<title>My courses</title>
 	<link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
@@ -31,8 +31,7 @@
 		</div>
 
 		<div id="main">
-			<div id="aside">
-			<br>
+			<div id="aside"><br>
 				<div id="Home Page">
 					<div class="asidepic">
 						<img src="../pic/home.png" alt="">
@@ -71,22 +70,52 @@
 			</div>
 
 			<div id="content">
-				<div id="my_courses" class="index_box">
-					<a href="my_courses.html">My courses</a>
-					<p>xxx</p>
+				<div id="程序设计" class="index_box">
+					<a href="courses/xxx.html">程序设计基础</a>
+					<div id="程序设计info" class="information">
+						<div id="teacherpic" class="teacherpic">
+							<img src="../pic/teacher.png" alt="">
+						</div>
+						<strong id="程序设计teacher">谭光&nbsp</strong> 
+						<span id="程序设计term">2017-2018学年&nbsp第1学期</span>
+						<p>课程简介：xxx</p>
+					</div>
 				</div>
 
-				<div id="my_process" class="index_box">
-					<a href="process.html">My process</a>
-					<p>xxx</p>
+				<div id="人工智能原理" class="index_box">
+					<a href="courses/xxx.html">人工智能原理</a>
+					<div id="人工智能原理info" class="information">
+						<div id="teacherpic" class="teacherpic">
+							<img src="../pic/teacher.png" alt="">
+						</div>
+						<strong id="人工智能原理teacher">梁小丹&nbsp</strong> 
+						<span id="人工智能原理term">2017-2018学年&nbsp第1学期</span>
+						<p>课程简介：xxx</p>
+					</div>
 				</div>
 
-				<div id="my_message" class="index_box">
-					<a href="message.html">Messages</a>
-					<p>xxx</p>
+				<div id="xxx" class="index_box">
+					<a href="courses/xxx.html">xxx实验室</a>
+					<div id="xxxinfo" class="information">
+						<div id="teacherpic" class="teacherpic">
+							<img src="../pic/teacher.png" alt="">
+						</div>
+						<strong id="xxxteacher">xxx&nbsp</strong> 
+						<span id="xxxterm">xxx学年&nbsp第xx学期</span>
+						<p>课程简介：xxx</p>
+					</div>
 				</div>
 				
+				<div id="add" class="index_box">
+					<a href="courses/all_courses.html">
+						<p>添加课程</p>
+					</a>
+					<div id="xxxinfo" class="information">
+						<p>课程不在列表里？加入新的课程</p>
+					</div>
+				</div>
 			</div>
+
 		</div>
 
 </body>
