--- a/watchlist/templates/settings.html
+++ b/watchlist/templates/settings.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>home page</title>
+	<title>Settings</title>
 	<link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
@@ -31,8 +31,8 @@
 		</div>
 
 		<div id="main">
-			<div id="aside">
-			<br>
+			<div id="main">
+			<div id="aside"><br>
 				<div id="Home Page">
 					<div class="asidepic">
 						<img src="../pic/home.png" alt="">
@@ -71,22 +71,9 @@
 			</div>
 
 			<div id="content">
-				<div id="my_courses" class="index_box">
-					<a href="my_courses.html">My courses</a>
-					<p>xxx</p>
-				</div>
-
-				<div id="my_process" class="index_box">
-					<a href="process.html">My process</a>
-					<p>xxx</p>
-				</div>
-
-				<div id="my_message" class="index_box">
-					<a href="message.html">Messages</a>
-					<p>xxx</p>
-				</div>
 				
 			</div>
+
 		</div>
 
 </body>
