--- a/watchlist/static/style.css
+++ b/watchlist/static/style.css
@@ -5,19 +5,60 @@
 }
 
 #container{
-	margin:auto;
+	margin:0;
 	/*background: linear-gradient(to top right,#2069F9,#48E9B2);*/
-	background:url("/static/pic/bg.gif");
+	background:url(../pic/bg.gif);
 }
 
 #header{
 	height:40px;
 }
+#userimg{
+	height: 80%;
+	width: 5%;
+	float:right;
+	line-height: 100%;
+	margin: 5px;
+
+}
+#userimg img{margin: 5px auto;}
+#user{
+	font-size:15px;
+	margin-top:-5px;
+	margin-left: 5px;
+	padding:2px;
+	background: rgba(255, 255, 255, 0.2);
+	border:1px solid white;
+	border-radius:5px;
+	color: white;
+}
+.userselect{
+	background-color: rgba(0,0,0,0.75);
+	line-height:25px;
+	padding: 2px;
+	margin-left: 2px;
+}
+
+
 #logo{
 	height:100%;
 	width:20%;
 	float: left;
 	background: rgba(255,255 ,255 , 0.2);
+}
+#logo img{
+	float: left;
+	margin-left: 40px;
+	height:80%;
+	margin-top: 3px;
+	/*border:1px solid black;*/ 
+}
+#logo span{
+	float: left;
+	margin-left: 10px;
+	margin-top: 8px;
+	font-weight:bold;
+	font-size: 23px;
 }
 #other{
 	height:100%;
@@ -51,18 +92,32 @@
 }
 #aside a{
 	text-decoration: none;
-	line-height:60px;
 	text-align: center;
     font-size: 20px;
     line-height:60px;
     height:60px;
     color:black;
 }
+.asidepic{
+	height: 80%;
+	width: 25px;
+	float:left;
+	line-height: 100%;
+}
+.asidepic img{
+	height: 70%;
+	margin:2px; 
+}
+.asidechoices{
+	height: 80%;
+	float:left;
+	line-height: 100%;
+}
 
 #content{
 	float: right;
 	width:80%;
-	height:100%;
+	height:90%;
 	overflow:auto;
 }
 #login{
@@ -71,19 +126,75 @@
 	overflow:auto;
 }
 .login-box{
-	line-height: 130%;
+	line-height: 180%;
 	font-size: 20px;
-	height: 25%;
+	height: 30%;
 	width: 25%;
 	padding: 10px;
 	margin-top: 10%;
-	margin-left: 40%; 
+	margin-left: 35%; 
 	background: rgba(255, 255, 255, 0.2);
-	border:1px solid white; 
+	border:1px solid white;
+	border-radius:8px;
+}
+#login span{font-size:15px;line-height:15px;margin-left:-15px;}
+#login form{
+	margin-left: 25px;
 }
 #login p{
 	font-weight:bold;
 	text-align: center;
+}
+
+.select_button{
+	font-size:15px;
+	margin-top:8px;
+	margin-left: 5px;
+	padding:4px;
+	background: rgba(255, 255, 255, 0.2);
+	border:1px solid white;
+	border-radius:5px;
+}
+.login_button{
+	float: right;
+	font-size: 15px;
+	margin-right:10px;
+	margin-top:8px;
+	padding:4px;
+	background: rgba(255, 255, 255, 0.2);
+	border:1px solid white;
+	border-radius:5px;
+}
+.index_box{
+	height:150px; 
+	width: 40%;
+	float: left;
+	margin: 25px;  
+    border:1px solid white;
+    background: rgba(255, 255, 255, 0.2);
+    padding:20px;
+    font-size: 20px;
+    border-radius:30px;
+}
+.index_box a{
+	font-size: 25px;
+	text-decoration: none;
+}
+.teacherpic{
+	height: 10%;
+	float:left;
+	line-height: 100%;
+	margin-right: 2px;
+}
+.teacherpic img{
+	height: 20px;
+	margin:2px; 
+}
+#loginbutton{
+	float: right;
+	font-size: 15px;
+	margin-top:8px;
+	padding:1px;
 }
 .program{
     height:100px;   
@@ -118,7 +229,7 @@
     font-size: 20px;
 }
 #edit{
-	height: 360px;
+	height: 380px;
 	border:1px solid #cff; 
     padding:10px;
     margin:10px;
@@ -188,4 +299,10 @@
 .gpu-box-each a{
 	text-decoration: none;
 	/*color: white;*/
+}
+.information{
+    font-size: 15px;
+    padding: 3px;
+    line-height: 24px;
+    overflow: auto;
 }
