--- a/watchlist/templates/process.html
+++ b/watchlist/templates/process.html
@@ -3,44 +3,75 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Progress</title>
-	<link rel="stylesheet" href="style/style.css" />
+	<link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
 	<div id="container">
 		<div id="header" >
-
-			<div id="logo"></div>
-
-			<div id="other">
-				<span>Username&nbsp</span>
-				<img src="pic/1.jpg" alt="image">
-				<span>&nbsp&nbsp</span>
+			<div id="logo">
+				<img src="../pic/logo.png" alt="">
+				<span>GPU管理系统</span>
 			</div>
 
+			<div id="other">
+				<div id="userimg">
+					<img src="../pic/1.jpg" alt="image">
+					<span>&nbsp&nbsp&nbsp</span>
+				</div>
+				<div id="userinfo">
+					<select name="user" id="user">
+						<option selected="selected" value="0" class="userselect">
+							<span>Username</span>
+						</option>
+						<option value="1" class="userselect">通知</option>
+						<option value="2" class="userselect">退出登录</option>
+					</select>
+				</div>				
+			</div>
 		</div>
 
 		<div id="main">
-			<div id="aside">
+			<div id="aside"><br>
 				<div id="Home Page">
-					<a href="index.html">Home Page</a>
+					<div class="asidepic">
+						<img src="../pic/home.png" alt="">
+					</div>
+					<div class="asidechoices">
+						<a href="index.html">Home Page</a>
+					</div>
 				</div>
 
 				<div id="My courses">
-					<a href="my_courses.html">My courses</a>
+					<div class="asidepic">
+						<img src="../pic/courses.png" alt="">
+					</div>
+					<div class="asidechoices">
+						<a href="my_courses.html">My courses</a>
+					</div>
 				</div>
 
-				<div id="Procress">
-					<a href="process.html">Process</a>
+				<div id="Process">
+					<div class="asidepic">
+						<img src="../pic/process.png" alt="">
+					</div>
+					<div class="asidechoices">
+						<a href="process.html">Process</a>
+					</div>
 				</div>
 
 				<div id="Settings">
-					<a href="settings.html">Settings</a>
+					<div class="asidepic">
+						<img src="../pic/settings.png" alt="">
+					</div>
+					<div class="asidechoices">
+						<a href="settings.html">Settings</a>
+					</div>
 				</div>
 			</div>
 
 			<div id="content">
 				<div id="program1" class="program">
-					<a href="program/1.html">Program 1</a>
+					<a href="../program/1.html">Program 1</a>
 					<p>xxx</p>
 				</div>
 
