--- a/watchlist/templates/my_courses.html
+++ b/watchlist/templates/my_courses.html
@@ -3,19 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>My courses</title>
-	<link rel="stylesheet" href="../style/style.css" />
+	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
 	<div id="container">
 		<div id="header" >
 			<div id="logo">
-				<img src="../pic/logo.png" alt="">
+				<img src="/static/pic/logo.png" alt="">
 				<span>GPU管理系统</span>
 			</div>
 
 			<div id="other">
 				<div id="userimg">
-					<img src="../pic/1.jpg" alt="image">
+					<img src="/static/pic/1.jpg" alt="image">
 					<span>&nbsp&nbsp&nbsp</span>
 				</div>
 				<div id="userinfo">
@@ -34,47 +34,47 @@
 			<div id="aside"><br>
 				<div id="Home Page">
 					<div class="asidepic">
-						<img src="../pic/home.png" alt="">
+						<img src="/static/pic/home.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="index.html">Home Page</a>
+						<a href="/index/">Home Page</a>
 					</div>
 				</div>
 
 				<div id="My courses">
 					<div class="asidepic">
-						<img src="../pic/courses.png" alt="">
+						<img src="/static/pic/courses.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="my_courses.html">My courses</a>
+						<a href="/my_courses/">My courses</a>
 					</div>
 				</div>
 
 				<div id="Process">
 					<div class="asidepic">
-						<img src="../pic/process.png" alt="">
+						<img src="/static/pic/process.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="process.html">Process</a>
+						<a href="/process/">Process</a>
 					</div>
 				</div>
 
 				<div id="Settings">
 					<div class="asidepic">
-						<img src="../pic/settings.png" alt="">
+						<img src="/static/pic/settings.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="settings.html">Settings</a>
+						<a href="/settings/">Settings</a>
 					</div>
 				</div>
 			</div>
 
 			<div id="content">
 				<div id="程序设计" class="index_box">
-					<a href="courses/xxx.html">程序设计基础</a>
+					<a href="courses/xxx/">程序设计基础</a>
 					<div id="程序设计info" class="information">
 						<div id="teacherpic" class="teacherpic">
-							<img src="../pic/teacher.png" alt="">
+							<img src="/static/pic/teacher.png" alt="">
 						</div>
 						<strong id="程序设计teacher">谭光&nbsp</strong> 
 						<span id="程序设计term">2017-2018学年&nbsp第1学期</span>
@@ -83,10 +83,10 @@
 				</div>
 
 				<div id="人工智能原理" class="index_box">
-					<a href="courses/xxx.html">人工智能原理</a>
+					<a href="courses/xxx/">人工智能原理</a>
 					<div id="人工智能原理info" class="information">
 						<div id="teacherpic" class="teacherpic">
-							<img src="../pic/teacher.png" alt="">
+							<img src="/static/pic/teacher.png" alt="">
 						</div>
 						<strong id="人工智能原理teacher">梁小丹&nbsp</strong> 
 						<span id="人工智能原理term">2017-2018学年&nbsp第1学期</span>
@@ -95,10 +95,10 @@
 				</div>
 
 				<div id="xxx" class="index_box">
-					<a href="courses/xxx.html">xxx实验室</a>
+					<a href="courses/xxx/">xxx实验室</a>
 					<div id="xxxinfo" class="information">
 						<div id="teacherpic" class="teacherpic">
-							<img src="../pic/teacher.png" alt="">
+							<img src="/static/pic/teacher.png" alt="">
 						</div>
 						<strong id="xxxteacher">xxx&nbsp</strong> 
 						<span id="xxxterm">xxx学年&nbsp第xx学期</span>
@@ -107,7 +107,7 @@
 				</div>
 				
 				<div id="add" class="index_box">
-					<a href="courses/all_courses.html">
+					<a href="courses/all_courses/">
 						<p>添加课程</p>
 					</a>
 					<div id="xxxinfo" class="information">
