--- a/watchlist/templates/submit.html
+++ b/watchlist/templates/submit.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Submit</title>
-	<link rel="stylesheet" href="../style/style.css" />
+	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
 	<div id="container">
@@ -13,7 +13,7 @@
 
 			<div id="other">
 				<span>Username&nbsp</span>
-				<img src="../pic/1.jpg" alt="image">
+				<img src="/static/pic/1.jpg" alt="image">
 				<span>&nbsp&nbsp</span>
 			</div>
 
@@ -22,19 +22,19 @@
 		<div id="main">
 			<div id="aside">
 				<div id="Home Page">
-					<a href="index.html">Home Page</a>
+					<a href="/index/">Home Page</a>
 				</div>
 
 				<div id="My courses">
-					<a href="my_courses.html">My courses</a>
+					<a href="/my_courses/">My courses</a>
 				</div>
 
 				<div id="Procress">
-					<a href="process.html">Process</a>
+					<a href="/process/">Process</a>
 				</div>
 
 				<div id="Settings">
-					<a href="settings.html">Settings</a>
+					<a href="/settings/">Settings</a>
 				</div>
 			</div>
 
@@ -52,7 +52,7 @@
 				<div id="edit">
 					<p>代码编辑器</p>
 					<textarea name="edit" cols="145" rows="18"></textarea>
-					<a href="result/1.html" style="float:right;font-size:15px;">
+					<a href="result/1/" style="float:right;font-size:15px;">
 					    <button style="font-size:16px;margin-right:10px;margin-top:8px;padding:1px;">运行</button>
 					</a>
 				</div>
