--- a/watchlist/templates/visitor.html
+++ b/watchlist/templates/visitor.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>login</title>
-	<link rel="stylesheet" href="style/style.css" />
+	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
 	<div id="container">
@@ -28,8 +28,8 @@
 						<span>这是2017级软件工程12组开发的GPU管理系统</span><br>
 						<span>用于课程/实验室中使用GPU</span><br>
 						<span>欢迎使用！</span>
-						<input type="submit" value="regist" name="register" class="login_button" onclick="location.href("/regist") style="margin-right:125px;">
-						<input type="submit" value="login" name="login" class="login_button" onclick="location.href("/login")>
+						<input type="submit" value="regist" name="register" class="login_button" onclick="location.href('/regist/')" style="margin-right:125px;">
+						<input type="submit" value="login" name="login" class="login_button" onclick="location.href('/login/')">
 
 						<table>
 							<tr>
