--- a/watchlist/templates/settings.html
+++ b/watchlist/templates/settings.html
@@ -3,19 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Settings</title>
-	<link rel="stylesheet" href="../style/style.css" />
+	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
 	<div id="container">
 		<div id="header" >
 			<div id="logo">
-				<img src="../pic/logo.png" alt="">
+				<img src="/static/pic/logo.png" alt="">
 				<span>GPU管理系统</span>
 			</div>
 
 			<div id="other">
 				<div id="userimg">
-					<img src="../pic/1.jpg" alt="image">
+					<img src="/static/pic/1.jpg" alt="image">
 					<span>&nbsp&nbsp&nbsp</span>
 				</div>
 				<div id="userinfo">
@@ -35,37 +35,37 @@
 			<div id="aside"><br>
 				<div id="Home Page">
 					<div class="asidepic">
-						<img src="../pic/home.png" alt="">
+						<img src="/static/pic/home.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="index.html">Home Page</a>
+						<a href="/index/">Home Page</a>
 					</div>
 				</div>
 
 				<div id="My courses">
 					<div class="asidepic">
-						<img src="../pic/courses.png" alt="">
+						<img src="/static/pic/courses.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="my_courses.html">My courses</a>
+						<a href="/my_courses/">My courses</a>
 					</div>
 				</div>
 
 				<div id="Process">
 					<div class="asidepic">
-						<img src="../pic/process.png" alt="">
+						<img src="/static/pic/process.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="process.html">Process</a>
+						<a href="/process/">Process</a>
 					</div>
 				</div>
 
 				<div id="Settings">
 					<div class="asidepic">
-						<img src="../pic/settings.png" alt="">
+						<img src="/static/pic/settings.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="settings.html">Settings</a>
+						<a href="/settings/">Settings</a>
 					</div>
 				</div>
 			</div>
