update login and signup

--- a/watchlist/templates/index.html
+++ b/watchlist/templates/index.html
@@ -10,7 +10,8 @@
 		<div id="header" >
 			<div id="logo">
 				<img src="/static/pic/logo.png" alt="">
-				<span>GPU管理系统</span>
+				<span><a href="/" style="text-decoration: none;">GPU管理系统</a></span>
+				
 			</div>
 
 			<div id="other">
