--- a/watchlist/templates/signup.html
+++ b/watchlist/templates/signup.html
@@ -1,21 +1,15 @@
 {% extends "layout.html" %}
 {% block body %}
-{% for message in get_flashed_messages() %}
 
-    <div class="alert">{{ message }}</div>
-
-{% endfor %}
 <div id="container">
     <div id="header" >
         <div id="logo">
-            <img src="pic/logo.png" alt="">
+            <img src="../static/pic/logo.png" alt="">
             <span>GPU管理系统</span>
         </div>
 
         <div id="other">
-            <span>visitor&nbsp</span>
-            <!-- <img src="pic/1.jpg" alt="image"> -->
-            <span>&nbsp&nbsp</span>
+            <span>visitor</span>
         </div>
     </div>
 
@@ -31,7 +25,7 @@
                 </p>
 
                 <form method="POST" action="/signup/">
-                    <table>
+                    <table style="color:black;">
                         <tr>
                             <td>UserName：</td>
                             <td>
@@ -46,11 +40,11 @@
                         </tr>
                         <tr>
                             <td>
-                                <input type="submit" class="button is-primary" value="注册">
-                                
+                                <a id="login_regit" href="/login/" class="button">已有账号？去登录</a>
                             </td>
                             <td>
-                                <a href="/login/" class="button">已有账号？去登录</a>
+                                <input id="login_login" type="submit" class="button is-primary" value="注册">
+                                
                             </td>
                         </tr>
                     </table>
